--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
-title: Your awesome title
+title: Rahul Shishodia
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: Rahul Shishodia
+  email: 26036435+rshnet@users.noreply.github.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  Write an awesome description for your new site here. You can edit this line
-  in _config.yml. It will appear in your document head meta (for Google search
-  results) and in your feed.xml site description.
 
 # Build settings
 
@@ -21,10 +18,14 @@ plugins:
 # Theme-specific settings
 
 minima:
-  # Minima date format.
-  # Refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this.
-  #
-  # date_format: "%b %-d, %Y"
+  # Refer https://shopify.github.io/liquid/filters/date/
+  date_format: "%b %-d, %Y"
+  header_pages:
+    - about.md
+  show_excerpts: false
+  social_links:
+    - { platform: github,         user_url: "https://github.com/rshnet" }
+    - { platform: linkedin,       user_url: "https://www.linkedin.com/in/rahulshishodia" }
 
   # Generate social links in footer.
   #
@@ -44,13 +45,3 @@ minima:
   #   - { platform: telegram,       user_url: "https://t.me/jekyll" }
   #   - { platform: twitter,        user_url: "https://twitter.com/jekyllrb" }
   #   - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
-
-# If you want to link only specific pages in your header, uncomment this and add the path to the pages in
-# order as they should show up.
-#
-# header_pages:
-#   - about.md
-
-# Set to `true` to show excerpts on the homepage.
-#
-# show_excerpts: false
